--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -11,3 +11,9 @@
 "CheckinNotice" = "請注意，在點下『確認使用』之後將會將可用餘額扣除，並且在一分鐘之內消失。\n\n請確認大會工作人員已經指示您按下『確認使用』按鈕後再按下按鈕，謝謝！";
 "CheckinButton" = "確認使用";
 "StatusNotice" = "您已經使用成功！\n\n請停留在此畫面給工作人員確認，謝謝！";
+"NotAvailableTitle" = "現在不能按喔";
+"NotAvailableMessage" = "提早太多按了你就會杯具了";
+"NotAvailableButtonOk" = "好喔";
+"ExpiredTitle" = "早就不能按了";
+"ExpiredMessage" = "你太慢按了就只能哭哭了喔";
+"ExpiredButtonOk" = "哭哭";
