--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -8,6 +8,8 @@
 
 
 "Title" = "COSCUP 2016";
+"GuideViewMessage" = "Please reference your attendee detail information, and your will found your access token.\n\nPlease copy and paste the token into next text field or click the token link in the reference mail.";
+"GuideViewButton" = "Redeem";
 "CheckinNotice" = "Notice!! Remaining will be deducted when click the \"Confirm use\" and disappeared in 1 minute.\n\nPlease double check it was instruct to click the \"Confirm use\" button by ours staff, thanks for your cooperation";
 "CheckinButton" = "Confirm use";
 "StatusNotice" = "It has been redeemed!!\n\nPlease stay in this screen view for ours staff to validate your ticket, thank you!";
