Translate string in schedule tab

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Schedule" = "Schedule";
 "HSSBuilding" = "H.S.S. Building";
 "ActivityCenter" = "Activity Center";
+"All" = "All";
 "Hi" = "Hi ";
 "day1checkin" = "Day 1 Checkin";
 "kit" = "Welcome Kit";
