--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Schedule" = "議程";
 "HSSBuilding" = "人文館";
 "ActivityCenter" = "活動中心";
+"All" = "全部";
 "Hi" = "嗨！";
 "day1checkin" = "第一天報到";
 "kit" = "迎賓袋領取";
