--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "lunch" = "Lunch";
 "CheckinViewButton" = "CHECK IN";
 "CheckinViewButtonPressed" = "FINISHED";
+"CheckinText" = "As well as continuing our long-standing spirit of \"sharing\", we hope to extend and expand this mission further and to a wider audience; so it grows into a force that makes for a better future.";
 "UseButton" = "USE";
 "UseButtonPressed" = "USED";
 "day2checkin" = "Day 2 Checkin";
@@ -30,7 +31,7 @@
 "Staffs" = "Staffs";
 "GuideViewMessage" = "Please reference your attendee detail information, and your will found your access token.\n\nPlease copy and paste the token into next text field or click the token link in the reference mail.";
 "GuideViewButton" = "Redeem";
-"CheckinNotice" = "Notice!! Remaining will be deducted when click the \"Confirm use\" and disappeared in 1 minute.\n\nPlease double check it was instruct to click the \"Confirm use\" button by ours staff, thanks for your cooperation";
+"CheckinNotice" = "Notice! It will be considered USED after click \"Confirm use\" button.\nPlease double check it is instruct to click the \"Confirm use\" button by our staff, thanks for your cooperation.";
 "CheckinButton" = "Confirm use";
 "StatusNotice" = "It has been redeemed!!\n\nPlease stay in this screen view for ours staff to validate your ticket, thank you!";
 "NotAvailableTitle" = "Cannot click at now";
