freshen code to using BLKFlexibleHeightBar to make toolbar animation of scrolling tableview

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "Schedule" = "Schedule";
 "Announce" = "Announce";
 "More" = "More";
+"ScheduleOfDate" = "Schedule Of %@";
 "HSSBuilding" = "H.S.S. Building";
 "ActivityCenter" = "Activity Center";
 "All" = "All";
