--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "Schedule" = "議程";
 "Announce" = "大會訊息";
 "More" = "更多";
+"ScheduleOfDate" = "%@ 當日議程";
 "HSSBuilding" = "人文館";
 "ActivityCenter" = "活動中心";
 "All" = "全部";
