Add sponsor list.

--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "Addition" = "其他";
 "IRC" = "IRC 頻道";
 "Staffs" = "籌備團隊";
+"Sponsors" = "贊助";
 "Introduction" = "簡介";
 "Speaker" = "講師";
 "GuideViewMessage" = "請參考您的與會詳細資訊，您會在信中找到使用代碼。\n\n請複製貼上該代碼到下面的文字輸入方塊中，或者直接點擊信中的代碼連結即可。";
