--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -23,6 +23,9 @@
 "CheckinViewButton" = "CHECK IN";
 "CheckinViewButtonPressed" = "FINISHED";
 "CheckinText" = "As well as continuing our long-standing spirit of \"sharing\", we hope to extend and expand this mission further and to a wider audience; so it grows into a force that makes for a better future.";
+"UseNoticeText" = "從封閉到開源，從個人到社群，我們曾走過很長一段路。";
+"meatLunch" = "葷食";
+"vegetarianLunch" = "素食";
 "UseButton_kit" = "Confirm to get the KIT bag?";
 "UseButton_day1lunch" = "Confirm to get day 1 lunch?";
 "UseButton_day2lunch" = "Confirm to get day 2 lunch?";
