--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -20,13 +20,16 @@
 "day1checkin" = "第一天報到";
 "kit" = "迎賓袋領取";
 "lunch" = "午餐領取";
+"vipkit" = "獨家紀念品";
 "CheckinViewButton" = "報到";
 "CheckinViewButtonPressed" = "已報到";
 "CheckinText" = "「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。";
+"CheckinTextVipKit" = "謝謝所有參與 COSCUP 2016 個人贊助方案的贊助者，因為有你們，促成了活動的舉行，感謝各位！";
 "UseNoticeText" = "從封閉到開源，從個人到社群，我們曾走過很長一段路。";
 "meatLunch" = "葷食";
 "vegetarianLunch" = "素食";
-"UseButton_kit" = "確定要領取資料袋嗎？";
+"UseButton_kit" = "確定要領取迎賓袋嗎？";
+"UseButton_vipkit" = "確定要領取獨家紀念品嗎？";
 "UseButton_day1lunch" = "確定要領取第一天的午餐嗎？";
 "UseButton_day2lunch" = "確定要領取第二天的午餐嗎？";
 "UseButton" = "使用";
