--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -25,9 +25,9 @@
 "CheckinViewButtonPressed" = "FINISHED";
 "CheckinText" = "As well as continuing our long-standing spirit of \"sharing\", we hope to extend and expand this mission further and to a wider audience; so it grows into a force that makes for a better future.";
 "CheckinTextVipKit" = "We appreciate your support! Because of you, COSCUP is doing better.";
-"UseNoticeText" = "從封閉到開源，從個人到社群，我們曾走過很長一段路。";
-"meatLunch" = "葷食";
-"vegetarianLunch" = "素食";
+"UseNoticeText" = "從封閉到開源\n從個人到社群\n我們曾走過很長一段路";
+"meatLunch" = "Meat";
+"vegetarianLunch" = "Vegetarian";
 "UseButton_kit" = "Confirm to get the KIT bag?";
 "UseButton_vipkit" = "Confirm to get the VIP KIT bag?";
 "UseButton_day1lunch" = "Confirm to get day 1 lunch?";
@@ -52,7 +52,7 @@
 "GuideViewTokenErrorDesc" = "Please reference your attendee detail information, and your will found your access token. "; //Need refine
 "CheckinNotice" = "Notice! It will be considered USED after click \"Confirm\" button.\nPlease double check that our staff has instructed you to click the \"Confirm\" button. Thanks for your cooperation.";
 "CheckinButton" = "Confirm use";
-"StatusNotice" = "It has been redeemed!!\n\nPlease stay in this screen view for ours staff to validate your ticket, thank you!";
+"StatusNotice" = "Please stay in this screen for staffs to validate your ticket, thank you!";
 "NetworkAlert" = "Please connect to the network of chamber";
 "NetworkAlertDesc" = "Perform check in when connecting to the network of chamber only";
 "NotAvailableTitle" = "Cannot click at now";
