--- a/CCIP/CCIP/zh-Hant.lproj/Main.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Main.strings
@@ -6,7 +6,7 @@
 "8w3-iH-STq.normalTitle" = "Button";
 
 /* Class = "UITabBarItem"; title = "More"; ObjectID = "AVK-vx-aDO"; */
-"AVK-vx-aDO.title" = "更多";
+"X9A-yE-P7Z.title" = "更多";
 
 /* Class = "UIButton"; normalTitle = "CHECK IN"; ObjectID = "HPS-iQ-rbE"; */
 "HPS-iQ-rbE.normalTitle" = "報到";
@@ -15,7 +15,7 @@
 "KUP-DK-ov7.text" = "「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。";
 
 /* Class = "UITabBarItem"; title = "IRC Channel"; ObjectID = "Wcm-jz-uW7"; */
-"Wcm-jz-uW7.title" = "IRC 頻道";
+"qtD-2E-7uu.title" = "IRC 頻道";
 
 /* Class = "UILabel"; text = "報到"; ObjectID = "ZY0-oM-P3F"; */
 "ZY0-oM-P3F.text" = "報到";
@@ -24,16 +24,16 @@
 "b0f-NH-c1U.normalTitle" = "確認使用";
 
 /* Class = "UITabBarItem"; title = "Announce"; ObjectID = "bfa-yy-GWY"; */
-"bfa-yy-GWY.title" = "大會訊息";
+"fAF-SI-dED.title" = "大會訊息";
 
 /* Class = "UITabBarItem"; title = "Schedule"; ObjectID = "fpK-Dn-uGS"; */
-"fpK-Dn-uGS.title" = "議程";
+"s9e-mH-WEn.title" = "議程";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "nug-PN-SE0"; */
 "nug-PN-SE0.text" = "Label";
 
 /* Class = "UITabBarItem"; title = "Checkin"; ObjectID = "o22-2q-CLO"; */
-"o22-2q-CLO.title" = "報到";
+"0RH-c0-HTe.title" = "報到";
 
 /* Class = "UILabel"; text = "8/20"; ObjectID = "q04-AM-eVF"; */
 "q04-AM-eVF.text" = "8/20";
