Change the meaning of acknowledgement string

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 "IRC" = "IRC Channel";
 "Staffs" = "Staffs";
 "Sponsors" = "Sponsors";
-"Acknowledgements" = "Acknowledgements";
+"Acknowledgements" = "Developers";
 "Contributions" = "Contributors";
 "Libraries" = "Open Source Libraries";
 "Introduction" = "Introduction";
