--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 "IRC" = "IRC 頻道";
 "Staffs" = "籌備團隊";
 "Sponsors" = "贊助";
-"Acknowledgements" = "致謝";
+"Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
 "Introduction" = "簡介";
