--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -59,13 +59,13 @@
 "StatusNotice" = "Please stay in this screen for staffs to validate your ticket, thank you!";
 "NetworkAlert" = "Please connect to the network of chamber";
 "NetworkAlertDesc" = "Perform check in when connecting to the network of chamber only";
-"InvalidTokenAlert" = "InvalidTokenAlert";
-"InvalidTokenTokenDesc" = "InvalidTokenTokenDesc";
-"NotAvailableTitle" = "Cannot click at now";
-"NotAvailableMessage" = "You will be G__G before we activate";
+"InvalidTokenAlert" = "Invalid Token";
+"InvalidTokenTokenDesc" = "This token is invalid,please check again.";
+"NotAvailableTitle" = "Error Message";
+"NotAvailableMessage" = "Not unavailable at this time.";
 "NotAvailableButtonOk" = "Okay";
-"ExpiredTitle" = "Already expired";
-"ExpiredMessage" = "T..o...o s..l.o..w .t..o cl..i.ck.. y..ou w.i..ll .cr..y";
-"ExpiredButtonOk" = "Crying";
+"ExpiredTitle" = "Error Message";
+"ExpiredMessage" = "Can't use because it has expired.";
+"ExpiredButtonOk" = "Okay";
 "Networking_Broken" = "Error while networking issues";
 "Networking_WrongWiFi" = "Please connect to the wifi provided by COSCUP";
