--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -53,19 +53,19 @@
 "GuideViewMessage" = "請參考您的與會詳細資訊，您會在信中找到使用代碼。\n\n請複製貼上該代碼到下面的文字輸入方塊中，或直接點擊信中的代碼連結即可。";
 "GuideViewButton" = "使用";
 "GuideViewTokenErrorTitle" = "錯誤的驗證碼";
-"GuideViewTokenErrorDesc" = "請參考您的與會詳細資訊，您會在信中找到使用代碼，或直接點擊信中的代碼連結即可。";
+"GuideViewTokenErrorDesc" = "請參考您的行前通知，您可以在信中找到使用代碼，或直接點擊信中的專屬連結即可。";
 "CheckinNotice" = "請注意！在點下『確認使用』之後，將立即視為已領取。\n請確認大會工作人員已經指示您按下『確認使用』按鈕後再按下按鈕，謝謝！";
 "CheckinButton" = "確認使用";
 "StatusNotice" = "請停留在此畫面\n給工作人員確認，謝謝！";
 "NetworkAlert" = "請連至會場網路";
 "NetworkAlertDesc" = "只有在連線到會場網路時，才可使用報到功能";
-"InvalidTokenAlert" = "InvalidTokenAlert";
-"InvalidTokenTokenDesc" = "InvalidTokenTokenDesc";
-"NotAvailableTitle" = "現在不能按喔";
-"NotAvailableMessage" = "提早太多按了你就會杯具了";
-"NotAvailableButtonOk" = "好喔";
-"ExpiredTitle" = "早就不能按了";
-"ExpiredMessage" = "你太慢按了就只能哭哭了喔";
-"ExpiredButtonOk" = "哭哭";
+"InvalidTokenAlert" = "無效的驗證碼";
+"InvalidTokenTokenDesc" = "您使用的驗證碼無效，請確認後再使用！";
+"NotAvailableTitle" = "錯誤訊息";
+"NotAvailableMessage" = "目前尚未開放使用";
+"NotAvailableButtonOk" = "知道了";
+"ExpiredTitle" = "錯誤訊息";
+"ExpiredMessage" = "已超過使用的期限";
+"ExpiredButtonOk" = "知道了";
 "Networking_Broken" = "網路連線異常";
-"Networking_WrongWiFi" = "請使用 COSCUP 提供的無線網路";
+"Networking_WrongWiFi" = "請連上 COSCUP 提供的無線網路，才能使用";
