--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "CheckinViewButtonPressed" = "FINISHED";
 "CheckinText" = "As well as continuing our long-standing spirit of \"sharing\", we hope to extend and expand this mission further and to a wider audience; so it grows into a force that makes for a better future.";
 "CheckinTextVipKit" = "We appreciate your support! Because of you, COSCUP is doing better.";
-"UseNoticeText" = "從封閉到開源\n從個人到社群\n我們曾走過很長一段路";
+"UseNoticeText" = "From close source to open source\nIndividual to Community\nWe've come a long way...";
 "meatLunch" = "Meat";
 "vegetarianLunch" = "Vegetarian";
 "UseButton_kit" = "Confirm to get the KIT bag?";
@@ -60,12 +60,12 @@
 "NetworkAlert" = "Please connect to the network of chamber";
 "NetworkAlertDesc" = "Perform check in when connecting to the network of chamber only";
 "InvalidTokenAlert" = "Invalid Token";
-"InvalidTokenTokenDesc" = "This token is invalid,please check again.";
+"InvalidTokenTokenDesc" = "This token is invalid, please check again.";
 "NotAvailableTitle" = "Error Message";
 "NotAvailableMessage" = "Not unavailable at this time.";
 "NotAvailableButtonOk" = "Okay";
 "ExpiredTitle" = "Error Message";
-"ExpiredMessage" = "Can't use because it has expired.";
+"ExpiredMessage" = "Can not use at this time, because it has been expired.";
 "ExpiredButtonOk" = "Okay";
 "Networking_Broken" = "Error while networking issues";
 "Networking_WrongWiFi" = "Please connect to the wifi provided by COSCUP";
