freshen checkin card code and add expired or not available text

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -67,5 +67,6 @@
 "ExpiredTitle" = "Error Message";
 "ExpiredMessage" = "Can not use at this time, because it has been expired.";
 "ExpiredButtonOk" = "Okay";
+"ExpiredOrNotAvailable" = "Expired or not available";
 "Networking_Broken" = "Error while networking issues";
 "Networking_WrongWiFi" = "Please connect to the wifi provided by COSCUP";
