--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -71,4 +71,4 @@
 "ExpiredOrNotAvailable" = "Expired or not available";
 "Networking_Broken" = "Error while networking issues";
 "Networking_WrongWiFi" = "Please connect to the wifi provided by COSCUP";
-"LoginGreeting" = "Hi %@, You have been successfully logged in COSCUP Pass!";
+"LoginGreeting" = "Hi %@, welcome to COSCUP 2016, enjoy this summer festival of fun!";
