--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -51,10 +51,10 @@
 "Libraries" = "開源專案";
 "Introduction" = "簡介";
 "Speaker" = "講師";
-"GuideViewMessage" = "請參考您的與會詳細資訊，您會在信中找到使用代碼。\n\n請複製貼上該代碼到下面的文字輸入方塊中，或直接點擊信中的代碼連結即可。";
+"GuideViewMessage" = "請透過行前通知內的連結開啟此應用程式\n\n您也可以點擊右上角打開相機掃描 KKTIX 提供的 QR Code";
 "GuideViewButton" = "使用";
 "GuideViewTokenErrorTitle" = "錯誤的驗證碼";
-"GuideViewTokenErrorDesc" = "請參考您的行前通知，您可以在信中找到使用代碼，或直接點擊信中的專屬連結即可。";
+"GuideViewTokenErrorDesc" = "請透過行前通知內的連結開啟此應用程式，您也可以點擊右上角打開相機掃描 KKTIX 提供的 QR Code";
 "CheckinNotice" = "請注意！在點下『確認使用』之後，將立即視為已領取。\n請確認大會工作人員已經指示您按下『確認使用』按鈕後再按下按鈕，謝謝！";
 "CheckinButton" = "確認使用";
 "StatusNotice" = "請停留在此畫面\n給工作人員確認，謝謝！";
