update localizable strings again...

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 "CheckinText" = "As well as continuing our long-standing spirit of \"sharing\", we hope to extend and expand this mission further and to a wider audience; so it grows into a force that makes for a better future.";
 "CheckinTextVipKit" = "We appreciate your support! Because of you, COSCUP is doing better.";
 "UseNoticeText" = "From close source to open source\nIndividual to Community\nWe've come a long way...";
-"meatLunch" = "non-Vegetarian";
+"meatLunch" = "Meal";
 "vegetarianLunch" = "Vegan";
 "UseButton_kit" = "Confirm to get the KIT bag?";
 "UseButton_vipkit" = "Confirm to get the VIP KIT bag?";
