fix localizable key

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -61,7 +61,7 @@
 "NetworkAlert" = "Please connect to the network of chamber";
 "NetworkAlertDesc" = "Perform check in when connecting to the network of chamber only";
 "InvalidTokenAlert" = "Invalid Token";
-"InvalidTokenTokenDesc" = "This token is invalid, please check again.";
+"InvalidTokenDesc" = "This token is invalid, please check again.";
 "NotAvailableTitle" = "Error Message";
 "NotAvailableMessage" = "Not unavailable at this time.";
 "NotAvailableButtonOk" = "Okay";
