--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -74,3 +74,5 @@
 "Networking_Broken" = "網路連線異常";
 "Networking_WrongWiFi" = "請連上 COSCUP 提供的無線網路，才能使用";
 "LoginGreeting" = "嗨 %@，歡迎您加入 COSCUP 2016，盡情享受這場盛夏饗宴吧！";
+"AfterEventMessage" = "在大會結束之後，我們需要您填寫一份問卷，感謝您！";
+"AfterEventActionTitle" = "開啟會後問卷";
