--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -61,6 +61,7 @@
 "StatusNotice" = "請停留在此畫面\n給工作人員確認，謝謝！";
 "NetworkAlert" = "請連至會場網路";
 "NetworkAlertDesc" = "只有在連線到會場網路時，才可使用報到功能";
+"InvalidNetworkButtonRetry" = "重試";
 "InvalidTokenAlert" = "無效的驗證碼";
 "InvalidTokenDesc" = "您使用的驗證碼無效，請確認後再使用！";
 "NotAvailableTitle" = "錯誤訊息";
