--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -53,7 +53,7 @@
 "Introduction" = "Introduction";
 "Speaker" = "Speaker";
 "GuideViewMessage" = "Please reference your attendee detail information, and you will find your access token.\n\nPlease copy and paste the token into next text field or click the token link in the reference mail.";
-"GuideViewButton" = "Redeem";
+"GuideViewButton" = "REDEEM";
 "GuideViewTokenErrorTitle" = "Wrong Redeem Token";
 "GuideViewTokenErrorDesc" = "Please reference the pre-notification, and your will found the redeem code from the mail, or you can click that redeem code link directly. ";
 "CheckinNotice" = "Notice! It will be considered USED after click \"Confirm\" button.\nPlease double check that our staff has instructed you to click the \"Confirm\" button. Thanks for your cooperation.";
