add `NSCameraUsageDescription` to prevent app crash

--- a/CCIP/CCIP/en.lproj/InfoPlist.strings
+++ b/CCIP/CCIP/en.lproj/InfoPlist.strings
@@ -9,3 +9,4 @@
 
 CFBundleDisplayName = "COSCUP Pass";
 CFBundleName = "COSCUP Pass";
+NSCameraUsageDescription = "Use your Camera to scan QR Code";
