replace image to gradient color to fit with design on announcement view

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "Schedule" = "Schedule";
 "Announce" = "Announce";
 "More" = "More";
+"AnnouncementTitle" = "Announcement";
 "ScheduleOfDate" = "Schedule Of %@";
 "HSSBuilding" = "H.S.S. Building";
 "ActivityCenter" = "Activity Center";
