--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "Schedule" = "議程";
 "Announce" = "大會訊息";
 "More" = "更多";
+"AnnouncementTitle" = "大會公告";
 "ScheduleOfDate" = "%@ 當日議程";
 "HSSBuilding" = "人文館";
 "ActivityCenter" = "活動中心";
