--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Announce" = "Announce";
 "More" = "More";
 "AnnouncementTitle" = "Announcement";
+"NoAnnouncementText" = "No Announcement !";
 "ScheduleOfDate" = "Schedule Of %@";
 "HSSBuilding" = "H.S.S. Building";
 "ActivityCenter" = "Activity Center";
