--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "Schedule" = "Schedule";
 "Announce" = "Announce";
 "More" = "More";
+"ScheduleTitle" = "SCHEDULE";
 "AnnouncementTitle" = "Announcement";
 "NoAnnouncementText" = "No Announcement !";
 "ScheduleOfDate" = "Schedule Of %@";
