change announcement title to upper case

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "Announce" = "Announce";
 "More" = "More";
 "ScheduleTitle" = "SCHEDULE";
-"AnnouncementTitle" = "Announcement";
+"AnnouncementTitle" = "ANNOUNCEMENT";
 "NoAnnouncementText" = "No Announcement !";
 "ScheduleOfDate" = "Schedule Of %@";
 "HSSBuilding" = "H.S.S. Building";
