add new views and maps file

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -48,6 +48,10 @@
 "day2lunch" = "Day 2 Lunch";
 "Addition" = "Addition";
 "IRC" = "IRC Channel";
+"Puzzle" = "Puzzle Game";
+"Ticket" = "My Ticket";
+"Telegram" = "Telegram Groups";
+"Maps" = "Maps";
 "Staffs" = "Staffs";
 "Sponsors" = "Sponsors";
 "Acknowledgements" = "Developers";
