--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -48,6 +48,10 @@
 "day2lunch" = "第二天午餐領取";
 "Addition" = "其他";
 "IRC" = "IRC 頻道";
+"Puzzle" = "大地遊戲";
+"Ticket" = "我的票卷";
+"Telegram" = "Telegram 群組";
+"Maps" = "場內地圖";
 "Staffs" = "籌備團隊";
 "Sponsors" = "贊助";
 "Acknowledgements" = "開發者";
