add `NSPhotoLibraryUsageDescription` to prevent app crash

--- a/CCIP/CCIP/en.lproj/InfoPlist.strings
+++ b/CCIP/CCIP/en.lproj/InfoPlist.strings
@@ -10,3 +10,4 @@
 CFBundleDisplayName = "COSCUP Pass";
 CFBundleName = "COSCUP Pass";
 NSCameraUsageDescription = "Use your Camera to scan QR Code";
+NSPhotoLibraryUsageDescription = "Read QR Code image from yout Photo Library";
