--- a/CCIP/CCIP/zh-Hant.lproj/InfoPlist.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/InfoPlist.strings
@@ -10,3 +10,4 @@
 CFBundleDisplayName = "COSCUP 通關";
 CFBundleName = "COSCUP 通關";
 NSCameraUsageDescription = "使用您的相機掃描 QR Code";
+NSPhotoLibraryUsageDescription = "從您的相簿讀取 QR Code 圖檔";
