add ticket notice

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "IRC" = "IRC Channel";
 "Puzzle" = "Puzzle Game";
 "Ticket" = "My Ticket";
+"TicketNotice" = "Please keep your ticket secretly and carefully, only shows for our staff or in booth event";
 "Telegram" = "Telegram Groups";
 "Maps" = "Maps";
 "Staffs" = "Staffs";
