--- a/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/CCIP/zh-Hant.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "IRC" = "IRC 頻道";
 "Puzzle" = "大地遊戲";
 "Ticket" = "我的票卷";
+"TicketNotice" = "請妥善保管您的票卷，僅提供此票卷給我們的工作人員或您參與攤位活動的工作人員使用";
 "Telegram" = "Telegram 群組";
 "Maps" = "場內地圖";
 "Staffs" = "籌備團隊";
