check accessToken before active function

--- a/CCIP/CCIP/en.lproj/Localizable.strings
+++ b/CCIP/CCIP/en.lproj/Localizable.strings
@@ -51,6 +51,7 @@
 "Puzzle" = "Puzzle Game";
 "Ticket" = "My Ticket";
 "TicketNotice" = "Please keep your ticket secretly and carefully, only shows for our staff or in booth event";
+"TicketNonExistNotice" = "Your Ticket not import into COSCUP Pass, please try again after import !";
 "Telegram" = "Telegram Groups";
 "Maps" = "Maps";
 "Staffs" = "Staffs";
